--- a/polling-app-client/src/user/login/Login.css
+++ b/polling-app-client/src/user/login/Login.css
@@ -3,8 +3,10 @@
     margin: 0 auto;
     margin: 0 auto;
     margin-top: 40px;
+    
 }
 
 .login-form-button {
     width: 100%;
+    background: rebeccapurple;
 }
