--- a/polling-app-client/src/user/signup/Signup.css
+++ b/polling-app-client/src/user/signup/Signup.css
@@ -7,13 +7,13 @@
 .signup-form-button {
     width: 100%;
     margin-top: 15px;
+   
 }
 
 .signup-form-button[disabled], .signup-form-button[disabled]:hover, .signup-form-button[disabled]:focus {
     opacity: 0.6;
     color: #fff;
-    background-color: #1890ff;
-    border-color: #1890ff;
+ background: rebeccapurple;
 }
 
 .signup-form input {
