--- a/polling-app-client/src/common/AppHeader.css
+++ b/polling-app-client/src/common/AppHeader.css
@@ -2,6 +2,8 @@
     
    
     float: center;
+
+    
   }
   
   .app-title a {
@@ -10,6 +12,8 @@
     font-size: 60px;
     display: inline-block;
     color: white;
+
+    
      
   }
   
@@ -19,11 +23,10 @@
   
   .app-header {
     gridArea: header;
-    background: rebeccapurple;  
+    background: rebeccapurple;   
     textAlign: center;
     fontSize: 25px;
-    width: "100%";
-    textAlign: center;
+    width: 100%;
   }
   
   .app-menu {
